commit translated contents

--- a/powerbi-docs/developer/index.yml
+++ b/powerbi-docs/developer/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 10/25/2019
-  ms.openlocfilehash: 1c7d24ae1a941cb820bed8ce23a142771829dc6c
-  ms.sourcegitcommit: 87b7cb4a2e626711b98387edaa5ff72dc26262bb
+  ms.openlocfilehash: 94800e2b5996b9b9fc6bf60c4c95dd72b0725b81
+  ms.sourcegitcommit: 6bbc3d0073ca605c50911c162dc9f58926db7b66
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 03/10/2020
-  ms.locfileid: "79041414"
+  ms.lasthandoff: 03/14/2020
+  ms.locfileid: "79378238"
 landingContent:
 - title: Sobre o Power BI para desenvolvedores
   linkLists:
@@ -61,7 +61,7 @@ landingContent:
     links:
     - text: Certificar um visual
       url: power-bi-custom-visuals-certified.md
-    - text: Publicar visuais personalizados no AppSource
+    - text: Publicar visuais do Power BI no AppSource
       url: office-store.md
 - title: Análise integrada
   linkLists:
