commit translated contents

--- a/powerbi-docs/breadcrumb/toc.yml
+++ b/powerbi-docs/breadcrumb/toc.yml
@@ -13,6 +13,9 @@
             - name: Consumidores
               tocHref: /power-bi/consumer/
               topicHref: /power-bi/consumer/index
+            - name: Móvel
+              tocHref: /power-bi/consumer/mobile/
+              topicHref: /power-bi/consumer/mobile/index
             - name: Desenvolvedor
               tocHref: /power-bi/developer/
               topicHref: /power-bi/developer/index
