--- a/powerbi-docs/collaborate-share/TOC.yml
+++ b/powerbi-docs/collaborate-share/TOC.yml
@@ -33,6 +33,8 @@
               href: ../service-admin-manage-your-data-storage-in-power-bi.md
             - name: Linhagem de dados
               href: service-data-lineage.md
+            - name: Aplicar rótulos de confidencialidade de dados
+              href: ../designer/service-security-apply-data-sensitivity-labels.md
             - name: Conectar-se a arquivos no OneDrive do seu grupo
               href: ../service-connect-to-files-in-app-workspace-onedrive-for-business.md
             - name: Colaborar em um workspace clássico
