--- a/powerbi-docs/developer/TOC.yml
+++ b/powerbi-docs/developer/TOC.yml
@@ -12,7 +12,7 @@
         - name: Visão geral
           items:
             - name: Visuais no Power BI
-              href: power-bi-custom-visuals.md
+              href: visuals/power-bi-custom-visuals.md
         - name: Tutoriais
           items:
             - name: Desenvolver um visual do Power BI
@@ -28,11 +28,11 @@
             - name: Conceitos visuais
               href: visuals/power-bi-visuals-concept.md
             - name: Visuais para organizações no Power BI
-              href: power-bi-custom-visuals-organization.md
+              href: visuals/power-bi-custom-visuals-organization.md
             - name: Diretrizes para visuais do Power BI
-              href: guidelines-powerbi-visuals.md
+              href: visuals/guidelines-powerbi-visuals.md
             - name: Perguntas frequentes sobre visuais
-              href: power-bi-custom-visuals-faq.md
+              href: visuals/power-bi-custom-visuals-faq.md
             - name: Usando as funcionalidades
               href: visuals/capabilities.md
             - name: Mapeamentos de exibição de dados
@@ -44,9 +44,9 @@
         - name: Como
           items:
             - name: Certificar um visual do Power BI
-              href: power-bi-custom-visuals-certified.md
+              href: visuals/power-bi-custom-visuals-certified.md
             - name: Publicar visuais do Power BI no AppSource
-              href: office-store.md
+              href: visuals/office-store.md
             - name: Usar visuais do Power BI baseados em R no Power BI
               href: ../desktop-r-powered-custom-visuals.md?toc=/powerbi-docs/developer/TOC.json&bc=/powerbi-docs/breadcrumb/toc.json
             - name: Interações visuais
@@ -76,7 +76,7 @@
             - name: Depurar visuais
               href: visuals/visuals-how-to-debug.md
             - name: Solucionar problemas de visuais do Power BI
-              href: power-bi-custom-visuals-troubleshoot.md
+              href: visuals/power-bi-custom-visuals-troubleshoot.md
         - name: Referência
           items:
             - name: Página de aterrissagem
@@ -119,7 +119,7 @@
               href: 'https://powerbi.microsoft.com/developers/'
             - name: Exemplos
               href: 'https://microsoft.github.io/PowerBI-visuals/samples/'
-            - name: Repositório Git de visuais personalizados
+            - name: Repositório Git de elementos visuais do Power BI
               href: 'https://go.microsoft.com/fwlink/?linkid=848277'
             - name: Criação de um certificado SSL
               href: visuals/create-ssl-certificate.md
