commit translated contents

--- a/powerbi-docs/developer/index.yml
+++ b/powerbi-docs/developer/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 10/25/2019
-  ms.openlocfilehash: 94800e2b5996b9b9fc6bf60c4c95dd72b0725b81
-  ms.sourcegitcommit: 6bbc3d0073ca605c50911c162dc9f58926db7b66
+  ms.openlocfilehash: b03678dba371ed26a8965c2ebbcd26453689cea2
+  ms.sourcegitcommit: a175faed9378a7d040a08ced3e46e54503334c07
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 03/14/2020
-  ms.locfileid: "79378238"
+  ms.lasthandoff: 03/18/2020
+  ms.locfileid: "79487753"
 landingContent:
 - title: Sobre o Power BI para desenvolvedores
   linkLists:
@@ -26,9 +26,9 @@ landingContent:
     - text: O que os desenvolvedores podem fazer
       url: what-can-you-do.md
     - text: Visuais no Power BI
-      url: power-bi-custom-visuals.md
+      url: visuals/power-bi-custom-visuals.md
     - text: O que é inserção
-      url: embedding.md
+      url: embedded/embedding.md
     - text: O que é a API do Power BI?
       url: automation/overview-of-power-bi-rest-api.md
   - linkListType: reference
@@ -52,42 +52,42 @@ landingContent:
   - linkListType: concept
     links:
     - text: Perguntas frequentes sobre visuais
-      url: power-bi-custom-visuals-faq.md
+      url: visuals/power-bi-custom-visuals-faq.md
     - text: Diretrizes para visuais
-      url: guidelines-powerbi-visuals.md
+      url: visuals/guidelines-powerbi-visuals.md
     - text: Modo de edição avançada em visuais
       url: visuals/advanced-edit-mode.md
   - linkListType: how-to-guide
     links:
     - text: Certificar um visual
-      url: power-bi-custom-visuals-certified.md
+      url: visuals/power-bi-custom-visuals-certified.md
     - text: Publicar visuais do Power BI no AppSource
-      url: office-store.md
+      url: visuals/office-store.md
 - title: Análise integrada
   linkLists:
   - linkListType: tutorial
     links:
     - text: Inserir o conteúdo para clientes
-      url: embed-sample-for-customers.md
+      url: embedded/embed-sample-for-customers.md
     - text: Inserir o conteúdo para sua organização
-      url: embed-sample-for-your-organization.md
+      url: embedded/embed-sample-for-your-organization.md
   - linkListType: concept
     links:
     - text: Segurança em nível de linha
-      url: embedded-row-level-security.md
+      url: embedded/embedded-row-level-security.md
     - text: Gerenciar multilocação
-      url: embed-multi-tenancy.md
+      url: embedded/embed-multi-tenancy.md
     - text: Perguntas frequentes sobre o Embedded
-      url: embedded-faq.md
+      url: embedded/embedded-faq.md
     - text: Permissões
-      url: power-bi-permissions.md
+      url: embedded/power-bi-permissions.md
   - linkListType: how-to-guide
     links:
     - text: Inserir de aplicativos
-      url: embed-from-apps.md
+      url: embedded/embed-from-apps.md
     - text: Crie um locatário do Azure Active Directory
-      url: create-an-azure-active-directory-tenant.md
+      url: embedded/create-an-azure-active-directory-tenant.md
     - text: Obter um token de acesso do Azure AD
-      url: get-azuread-access-token.md
+      url: embedded/get-azuread-access-token.md
     - text: Recurso de P e R no Power BI Embedded
-      url: qanda.md
+      url: embedded/qanda.md
