--- a/powerbi-docs/guidance/TOC.yml
+++ b/powerbi-docs/guidance/TOC.yml
@@ -78,6 +78,12 @@
               href: report-tips-legends.md
             - name: Dicas para otimizar cores do visual
               href: report-tips-visual-colors.md
+            - name: Dicas para otimizar cores do visual
+              href: report-tips-visual-colors.md
+            - name: Dicas para classificar e distribuir gráficos de dados
+              href: report-tips-sort-distribute-data-plots.md
+            - name: 'Dicas para trabalhar com formas, imagens e ícones'
+              href: report-tips-shapes-images-icons.md
         - name: Relatórios paginados no Power BI
           items:
             - name: Quando usar relatórios paginados
