commit translated contents

--- a/powerbi-docs/consumer/index.yml
+++ b/powerbi-docs/consumer/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.topic: landing-page
   author: mihart
   ms.author: mihart
-  ms.date: 02/25/2020
-  ms.openlocfilehash: 3f6431f2011b4b6a75ea766d6051b02ce2abe947
-  ms.sourcegitcommit: ced8c9d6c365cab6f63fbe8367fb33e6d827cb97
+  ms.date: 03/22/2020
+  ms.openlocfilehash: 46a4e6af0f1f843b5b6e9ad22f845f073a48e804
+  ms.sourcegitcommit: bcc42e938fa28abe433287fecb9abb28c253b6bb
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 03/07/2020
-  ms.locfileid: "78919330"
+  ms.lasthandoff: 03/26/2020
+  ms.locfileid: "80302308"
 landingContent:
 - title: Conheça o Power BI para consumidores
   linkLists:
@@ -71,6 +71,8 @@ landingContent:
   linkLists:
   - linkListType: how-to-guide
     links:
+    - text: Compartilhado comigo
+      url: end-user-shared-with-me.md
     - text: Publicar um relatório para o PowerPoint
       url: end-user-powerpoint.md
     - text: Exportar um relatório para PDF
