commit translated contents

--- a/powerbi-docs/create-reports/TOC.yml
+++ b/powerbi-docs/create-reports/TOC.yml
@@ -18,10 +18,8 @@
     - name: Exemplos
       expanded: true
       items:
-        - name: Obter dados de exemplo para o Power BI
+        - name: Obter exemplos para o Power BI
           href: ../sample-datasets.md
-        - name: Importar e abrir pacotes de exemplo
-          href: ../sample-tutorial-connect-to-the-samples.md
         - name: Exemplo de Rentabilidade do Cliente
           href: ../sample-customer-profitability.md
         - name: Exemplo de Análise de Gastos de TI
@@ -34,6 +32,8 @@
           href: ../sample-procurement.md
         - name: Exemplo de Análise de Varejo
           href: ../sample-retail-analysis.md
+        - name: Explorar exemplo de Análise de Varejo
+          href: ../sample-tutorial-connect-to-the-samples.md
         - name: Exemplo de vendas e marketing
           href: ../sample-sales-and-marketing.md
         - name: Exemplo de análise da qualidade do fornecedor
