commit translated contents

--- a/powerbi-docs/create-reports/TOC.yml
+++ b/powerbi-docs/create-reports/TOC.yml
@@ -20,6 +20,8 @@
       items:
         - name: Obter exemplos para o Power BI
           href: ../sample-datasets.md
+        - name: Exemplo da COVID-19 nos EUA
+          href: sample-covid-19-us.md
         - name: Exemplo de Rentabilidade do Cliente
           href: ../sample-customer-profitability.md
         - name: Exemplo de Análise de Gastos de TI
